--- a/style.css
+++ b/style.css
@@ -1,80 +1,84 @@
 :root {
   --page-bg-color: #222831;
-  --pokecard-color:#393E46;
-  --text-color:#EEEEEE;
-  --gradient-first-color:#222831;
-  --gradient-second-color: #EEEEEE;
-  --pokecard-border:#FFD369;
+  --pokecard-color: #393e46;
+  --text-color: #eeeeee;
+  --gradient-first-color: #222831;
+  --gradient-second-color: #eeeeee;
+  --pokecard-border: #edab12;
 }
 
 * {
-  margin:0;
-  padding:0;
+  margin: 0;
+  padding: 0;
   box-sizing: border-box;
 }
 
 body {
-   background-color: var(--page-bg-color);
-   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-   font-size: 18;
-   color:var(--text-color);
-  }
-  
-  #page {
-    text-align: center;
- }
+  background-color: var(--page-bg-color);
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-size: 18;
+  color: var(--text-color);
+}
 
- #pokedex-logo {
-   position: sticky;
-   top: 0.1px;
-   background-color: var(--page-bg-color);
-   box-shadow: 0px 20px 10px var(--page-bg-color);
-   padding-top: 20px;
-   margin-bottom:20px;
-   z-index: 2;
- }
+#page {
+  text-align: center;
+}
 
- .pokemon-collection {
-   width: 70%;
-   margin: 0 auto;
-   display: flex;
-   gap: 20px;
-   flex-wrap: wrap;
-   justify-content: center;
- }
- 
- .pokemon-card {
-   width: 200px;
-   height: 410px;
-   padding: 10px;
-   border: var(--pokecard-border) 1px solid;
-   box-shadow: 4px 3px 0px var(--pokecard-border);
-   border-radius: 10px;
-   background-color: var(--pokecard-color);
-   display: flex;
-   flex-direction: column;
-   row-gap: 10px;
-   justify-content: flex-start;
-   position: relative;
- }
+#pokedex-logo {
+  position: sticky;
+  top: 0.1px;
+  background-color: var(--page-bg-color);
+  box-shadow: 0px 20px 10px var(--page-bg-color);
+  padding-top: 20px;
+  margin-bottom: 20px;
+  z-index: 2;
+}
 
- .pokemon-name {
-   padding-top: 10px;
-   width: 100%;
-   font-weight: 500;
-   border-bottom: 4px var(--pokecard-border) solid;
-   transition-duration: 1s;
-   transition-timing-function: ease-out;
- }
+.pokemon-collection {
+  width: 70%;
+  margin: 0 auto;
+  display: flex;
+  gap: 20px;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.pokemon-card {
+  width: 200px;
+  height: 410px;
+  padding: 10px;
+  border: var(--pokecard-border) 1px solid;
+  box-shadow: 4px 3px 0px var(--pokecard-border);
+  border-radius: 10px;
+  background-color: var(--pokecard-color);
+  display: flex;
+  flex-direction: column;
+  row-gap: 10px;
+  justify-content: flex-start;
+  position: relative;
+}
+
+.pokemon-name {
+  padding-top: 10px;
+  width: 100%;
+  font-weight: 500;
+  border-bottom: 4px var(--pokecard-border) solid;
+  transition-duration: 1s;
+  transition-timing-function: ease-out;
+}
 
 .pokemon-image-bg {
   border-radius: 10px;
-  background: linear-gradient(var(--gradient-second-color),var(--gradient-first-color));
+  background: linear-gradient(
+    var(--gradient-second-color),
+    var(--gradient-first-color)
+  );
 }
 
 .pokemon-image {
- height:175px;
- width:175px;
+  height: 175px;
+  width: 175px;
 }
 
 .element {
@@ -99,7 +103,7 @@ body {
 .pokemon-card:hover .element {
   border: var(--text-color) 2px solid;
   z-index: 1;
-  padding:5px;
+  padding: 5px;
   border-radius: 10px;
   color: var(--page-bg-color);
   background-color: var(--pokecard-border);
@@ -114,7 +118,7 @@ body {
 }
 
 .pokemon-card:hover .zoomable {
-  z-index:1;
+  z-index: 1;
   border: var(--text-color) 2px solid;
   border-radius: 10px;
   background-color: var(--page-bg-color);
